[package]
name = "rsipfix"
version = "0.1.4"
authors = ["Essa Alkuwari <qnix@0x80.org>"]
description = "IPFIX parser library"
homepage = "https://github.com/q6r/rs-ipfix"
repository = "https://github.com/q6r/rs-ipfix"
license = "MIT"
readme = "readme.md"

[dependencies]
nom-derive = "0.8.0"
nom = { version = "6.1.2" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.40"
rustc-hash = "1.1.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "parse"
harness = false
